[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_term_helper_rothberry"
version = "0.0.1"
authors = [
  { name="rothberry", email="phil.roth077@gmail.com" },
]
description = "A simple package for helpful python terminal outputs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rothberry/py-term-helpers"
Issues = "https://github.com/rothberry/py-term-helpers/issues"